<resources>
    <string name="app_name">Math Composition</string>
    <string name="welcome_image">Welcome image</string>
    <string name="got_it">Got it!</string>
    <string name="number_composition">Number composition</string>
    <string name="just_game_rules_and_a_lot_of_unnessesary_chars">Game Rules, so it is ...</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="test">Test</string>
    <string name="choose_level">Choose level</string>
    <string name="try_again">Try again</string>
    <string name="smile">smile</string>
    <string name="progress_answers">Right answers %s (min %s)</string>
    <string name="your_score">Your score %s</string>
    <string name="your_percent">Your percent %s</string>
    <string name="necessary_required_percent">Necessary required percent: %s</string>
    <string name="necessary_right_answers_count">Necessary right answers count: %s</string>
</resources>